name:               hdbc-mysql-driver
version:            0.1.0.0
synopsis:           Yet another MySQL driver for HDBC
description:        Please see README.md
homepage:           http://github.com/krdlab/hdbc-mysql-driver#readme
license:            BSD3
license-file:       LICENSE
author:             Sho Kuroda
maintainer:         Sho Kuroda <krdlab@gmail.com>
copyright:          (c) 2015 Sho Kuroda
category:           Database
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Database.HDBC.MySQL
  -- other-modules:
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , HDBC
                    , mysql
  default-language:   Haskell2010
  ghc-options:      -Wall
  extra-libraries:  mysqlclient

test-suite hdbc-mysql-driver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdbc-mysql-driver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krdlab/hdbc-mysql-driver
